--- a/client/package.json
+++ b/client/package.json
@@ -18,11 +18,17 @@
     "csvtojson": "^2.0.8",
     "lodash": "^4.17.10",
     "materialize-css": "^1.0.0-rc.2",
+    "materialize-social": "^1.0.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-helmet": "^5.2.0",
+    "react-icons": "^3.0.5",
+    "react-materialize": "^2.4.5",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
