--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.6",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.3",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
