--- a/client/package.json
+++ b/client/package.json
@@ -14,19 +14,24 @@
     }
   },
   "dependencies": {
+    "@material-ui/core": "^3.0.2",
+    "@material-ui/icons": "^3.0.1",
     "axios": "^0.18.0",
     "csvtojson": "^2.0.8",
     "lodash": "^4.17.10",
     "materialize-social": "^1.0.3",
     "react": "^16.4.2",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^16.4.2",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.0.5",
     "react-materialize": "^2.4.5",
+    "react-paypal-express-checkout": "^1.0.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-form": "^7.4.2",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1"
