Redux dev tool extension is now also in production

--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,8 @@
     "redux-form": "^7.4.2",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "redux-devtools-extension": "^2.13.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,7 +44,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.5"
-  }
+  "devDependencies": {}
 }
